fix(patch-notes): center page and stop "Version 1.0" overlapping the headline
The wrapping .fluid-container has an asymmetric 60px-left / 0-right margin,
which pushed the 720px content blocks off-center. Add a .pn-container modifier
that resets the left/right margins to auto with a 720px max-width so the page
sits centered.

.pn-version had margin-top: -10px, pulling it up into the h1's tight
line-height: 20px box and visually overlapping the title. Zero it out.

--- a/assets/css/views/_patch-notes.scss
+++ b/assets/css/views/_patch-notes.scss
@@ -8,11 +8,17 @@ $pn-icons:    #a2cd44;
 $pn-misc:     #c9a115;
 $pn-security: $primary;
 
+.fluid-container.pn-container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
+}
+
 .pn-content {
   width: 720px;
 
   .pn-version {
-    margin: -10px 20px 20px 20px;
+    margin: 0 20px 20px 20px;
     font-size: 1.2rem;
     color: $white-alt;
     letter-spacing: 1px;
